--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -11,12 +13,13 @@
     <title>Menu Navigation Bar Tutorial</title>
 </head>
 
-<body>
+<body class="body">
+
 
     <div class="menubar">
         <div class="brand">REHOBOTHSAM</div>
         <ul class="menubarul">
-            <li><a href="#">Home <i class="fa fa-angle-down"></i> </a>
+            <li><a href="#">Home <i class="fa fa-angle-right"></i> </a>
                 <div class="submenubar">
                     <ul class="submenubarul">
                         <li><a href="#">Company</a></li>
@@ -27,7 +30,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="#">Services <i class="fa fa-angle-down"></i></a>
+            <li><a href="#">Services <i class="fa fa-angle-right"></i></a>
                 <div class="submenubar">
                     <ul class="submenubarul">
                         <li><a href="#">Web Programmin</a></li>
@@ -37,7 +40,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="#">Training <i class="fa fa-angle-down"></i> </a>
+            <li><a href="#">Training <i class="fa fa-angle-right"></i> </a>
                 <div class="submenubar">
                     <ul class="submenubarul">
                         <li><a href="#">Scriptures</a></li>
@@ -48,7 +51,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="#">Downloads <i class="fa fa-angle-down"></i> </a>
+            <li><a href="#">Downloads <i class="fa fa-angle-right"></i> </a>
                 <div class="submenubar">
                     <ul class="submenubarul">
                         <li><a href="#">Godly Books</a></li>
@@ -65,12 +68,11 @@
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-
-
         </div>
+    </div>           
     </div>
-    <script src="./Nav.js"></script>       
-    </div>
+    
+    <script src="./Nav.js"></script>
 </body>
 
 </html>
